# pobsd-lib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  rust-clippy.yml  test.yml
src/: database.rs  game.rs  lib.rs  parser.rs  queries.rs  query_result.rs  store_links.rs
src/db/: README.md  database.rs  game_filer.rs  mod.rs  queries.rs  query_result.rs
src/models/: field.rs  game.rs  game_status.rs  mod.rs  parser.rs  store_links.rs
src/parser/: field.rs  game.rs  mod.rs  parser  parser.rs  split_line.rs  store_links.rs
src/parsing/: mod.rs  parser_macros.rs
tests/: db_integration_tests.rs  integration_tests.rs  parser_integration_tests.rs  query_result_integration_tests.rs
tests/data/: test-games-faulty-at-start.db  test-games-faulty.db
