[package]
name = "libpobsd"
description = "Library to interact with the PlayOnBSD database "
authors = ["Hukadan <me@hukadan.org>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/playonbsd-rs/pobsd-lib"
repository = "https://github.com/playonbsd-rs/pobsd-lib"
documentation = "https://docs.rs/libpobsd"
license = "MIT"
readme = "README.md"
keywords = ["OpenBSD", "PlayOnBSD"]
rust-version = "1.68.0"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
regex = "1.7.3"
hash32 = "0.3.1"
paste = "1.0.12"
